--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,26 @@
 <h1>Update Pet</h1>
+<form action="/pets/<%= @pet.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="patch">
 
+    <label>Edit the Pet name:</label><br>
+
+    <input type="text" name="pet[name]" id="pet_name" value="<%= @pet.name %>">
+
+    <label>Choose an existing owner:</label>
+
+    <% @owners.each do |owner| %>
+        <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>" <%='checked' if @pet.owner == owner %>>
+        <%=owner.name%>
+        </input>
+      <% end %><br>
+
+      <label>and/or, create a new owner:</label>
+      <br></br>
+      <label>Name:</label>
+        <input type="text" name="owner[name]" id="owner_name"></input>
+    
+      <br></br>
+
+    <input type="submit" value="Update Pet">
+</form>
 
